# OuterSpaceSimulation

./: CMakeLists.txt  README.md
constants/: constants.h
include/: ad.h
src/: app.cpp  app.h  main.cpp  simulation.cpp  simulation.h  types.h
src/manager/: inputmanager.cpp  inputmanager.h
src/physics/: CelestialBody.cpp  celestialBody.h  explosionParticle.h  physics.cpp  physics.h  simulation.cpp  simulation.h
src/visuals/: Renderer.cpp  UIComponent.cpp  visuals.cpp  visuals.h
